adding images files and put it all in the html file

--- a/index.html
+++ b/index.html
@@ -19,16 +19,16 @@
 
             <!-- you images start here -->
             <div class="slide first">
-                <img src="" alt="">
+                <img src="/images/jkw.jpg" alt="president of Indonesia">
             </div>
             <div class="slide">
-                <img src="" alt="">
+                <img src="/images/klaus schwab.png" alt="ceo of wef">
             </div>
             <div class="slide">
-                <img src="" alt="">
+                <img src="/images/mandela.jpg" alt="president of South Africa">
             </div>
             <div class="slide">
-                <img src="" alt="">
+                <img src="/images/march r.jpg" alt="ceo of Saleforce">
             </div>
             <!-- your images end here -->
 
