adding style and modified manual-navigation

--- a/index.html
+++ b/index.html
@@ -5,10 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>carousal</title>
+    <!-- your desing style in here, feel free to change it accordance your design-->
+    <link rel="stylesheet" href="mystyle.css">
 </head>
 <body>
-    <!-- your slider parent start here -->
-    <section class="slider">
+    <!-- your parent slider start here -->
+    <section class="parent-slider">
         <div class="slides">
             <!-- your radio very useful when the user clicked it. if you want more or less the slide, you can add it or delete it-->
             <input type="radio" name="radio-btn" id="radio1">
@@ -19,16 +21,16 @@
 
             <!-- you images start here -->
             <div class="slide first">
-                <img src="/images/jkw.jpg" alt="president of Indonesia">
+                <img src="images/jkw.jpg" alt="president of Indonesia">
             </div>
             <div class="slide">
-                <img src="/images/klaus schwab.png" alt="ceo of wef">
+                <img src="images/klaus schwab.png" alt="ceo of wef">
             </div>
             <div class="slide">
-                <img src="/images/mandela.jpg" alt="president of South Africa">
+                <img src="images/mandela.jpg" alt="president of South Africa">
             </div>
             <div class="slide">
-                <img src="/images/march r.jpg" alt="ceo of Saleforce">
+                <img src="images/march r.jpg" alt="ceo of Saleforce">
             </div>
             <!-- your images end here -->
 
