adding script file. this file is to give an animation to our slides

--- a/index.html
+++ b/index.html
@@ -53,5 +53,8 @@
             <!-- your manual-navigation end here -->
     </section>
     <!-- yor slider parent end here -->
+
+<!-- here the script file for your auto-navigation  -->
+<script src="script.js"></script>
 </body>
 </html>
